--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-validator": "^6.13.0",
+    "lodash": "^4.17.21",
+    "uniqid": "^5.4.0"
   }
 }
